fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     grid-template-columns: repeat(5, 1fr);
     justify-content: center;
     justify-items: center;
-    gap: 10px;
        
 }
 
